# BetaTraxService-GroupK

./: AUTOMATED_TESTING_SUMMARY.md  LICENSE  POSTGRES_SETUP.md  README.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh
BetaTrax/: .coverage  .coveragerc  .gitignore  pyproject.toml  schema.yaml
BetaTrax/Resolving/: admin.py  api_views.py  models.py  serializers.py  tests.py  urls.py  views.py
BetaTrax/assigned_defects/: apps.py  tests.py  views.py
BetaTrax/comments/: admin.py  api_views.py  models.py  postcom.py  serializers.py  tests.py  urls.py  views.py
BetaTrax/customers/: admin.py  apps.py  models.py
BetaTrax/defects/: admin.py  apps.py  developer_metrics.py  developer_views.py  metrics.py  models.py  product_owner_confirm_views.py  product_owner_retest_views.py  serializers.py  signals.py  tests.py  urls.py  views.py
BetaTrax/demo/: settings.py  urls.py
BetaTrax/products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
BetaTrax/templates/: index.html
BetaTrax_Sprint1/: LICENSE  db.sqlite3  pyproject.toml
BetaTrax_Sprint1/Resolving/: api_views.py  apps.py  models.py  serializers.py  views.py
BetaTrax_Sprint1/assigned_defects/: serializers.py  urls.py  views.py
BetaTrax_Sprint1/betatrax/: admin.py  models.py  serializers.py  urls.py  views.py
BetaTrax_Sprint1/comments/: api_views.py  models.py  serializers.py  urls.py  views.py
BetaTrax_Sprint1/defects/: admin.py  apps.py  models.py  (+6 more)
betatrax/: apps.py  models.py  urls.py  views.py
defects/: models.py
demo/: settings.py  urls.py
(+71 files in other folders)
